--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,7 +345,13 @@ header .banner {
 footer,
 footer a {
     font-size: 12px;
-    color: #3A4145;
+    background: rgba(52, 164, 202, 0.66);
+    background: -webkit-linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent);
+    background: -moz-linear-gradient(-45deg, rgba(52, 164, 202, 0.66)0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent);
+    background: -o-linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent);
+    background: linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent);
+	background-size: cover, cover;
+	background-position: center, center;
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
