--- a/default.hbs
+++ b/default.hbs
@@ -21,6 +21,7 @@
     <style>
     header {
     margin: 20px auto;
+    border-radius :2px;  
     padding-bottom: 20px;    
     max-width: 80%;   
     background: rgba(52, 164, 202, 0.66);
