--- a/default.hbs
+++ b/default.hbs
@@ -23,23 +23,16 @@
             border-radius: 2px;
             padding-bottom: 20px;
             max-width: 80%;
-            background: rgba(52, 164, 202, 0.66);
-            background: -webkit-linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent),
-            url({{@blog.cover}});
-            background: -moz-linear-gradient(-45deg, rgba(52, 164, 202, 0.66)0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent),
-            url({{@blog.cover}});
-            background: -o-linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent),
-            url({{@blog.cover}});
-            background: linear-gradient(-45deg, rgba(52, 164, 202, 0.66) 0%, rgba(89, 215, 221, 0.66) 28%, rgba(168, 242, 240, 0.66) 59%, rgba(208, 248, 239, 0.66) 84%, rgba(214, 246, 225, 0.66) 100%, transparent),
-            url({{@blog.cover}});
-            background-size: cover, cover;
-            background-position: center, center;
+            background: url({{@blog.cover}});
             height: auto;
             width: 100%;
             justify-content: center;
             align-items: center;
             text-align: center;
         }  
+        header:before {
+            background-image: #7bd0c1;
+        }
         header #nav li a {
             color: #fff;
         }
