--- a/default.hbs
+++ b/default.hbs
@@ -23,25 +23,19 @@
             border-radius: 2px;
             padding-bottom: 20px;
             max-width: 80%;
-            background: url({{@blog.cover}});
+            background: url({{@blog.cover}}) center center, cover;
+            background-size: cover;
             height: auto;
             width: 100%;
-            justify-content: center;
-            align-items: center;
             text-align: center;
         }  
-        header:before {
-            background-image: #7bd0c1;
-        }
         header #nav li a {
             color: #fff;
         }
-
     </style>
     {{else}}
     <style>
         header {
-            position: relative;
             width: 100%;
             text-align: center;
             height: 50px;
