--- a/default.hbs
+++ b/default.hbs
@@ -23,7 +23,7 @@
             border-radius: 2px;
             padding-bottom: 20px;
             max-width: 80%;
-            background: url({{@blog.cover}}) center center, cover;
+            background: url({{@blog.cover}});
             background-size: cover;
             height: auto;
             width: 100%;
