--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,12 @@ body {
 }
 a {
     background-color: transparent;
-    color: #f2849e;
+    color: #7bd0c1;
     text-decoration: none;
 }
 a:focus,
 a:hover {
-    color: #c75b9b;
+    color: #f2849e;
     transition: transform 0.5s ease, opacity 0.5s ease;
     text-decoration: none;
 }
