--- a/default.hbs
+++ b/default.hbs
@@ -32,6 +32,11 @@
         header #nav li a {
             color: #fff;
         }
+        @media screen and (max-width:600px) {
+            header {
+                width: 95%;
+            }
+        }
     </style>
     {{else}}
     <style>
