--- a/default.hbs
+++ b/default.hbs
@@ -47,7 +47,7 @@
         }
         header #nav li a,
         header #nav li a:hover {
-            color: #3A4145;
+            color: #7bd0c1;
         }
     {{/is}}
     </style>
