--- a/default.hbs
+++ b/default.hbs
@@ -45,8 +45,12 @@
             text-align: center;
             height: 50px;
         }
-        header #nav li a,
+        header #nav li a,{
+            color: #7bd0c1;
+        }
         header #nav li a:hover {
+            border: 2px solid #7bd0c1;
+            border-radius: 5px;
             color: #7bd0c1;
         }
     {{/is}}
