--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,9 @@ hr {
   Header & Navigation
 ===============================================================================
 */
+header {
+    width: 80%;
+}
 
 header #nav {
     height: 50px;
