Fix ghost pro errors, make more generic for others to use

--- a/default.hbs
+++ b/default.hbs
@@ -27,7 +27,7 @@
             background-size: cover;
             height: auto;
             text-align: center;
-        }  
+        }
         header #nav li a {
             color: #fff;
         }
@@ -54,7 +54,7 @@
         }
     {{/is}}
     </style>
-    
+
     {{ghost_head}}
 
 </head>
@@ -67,7 +67,7 @@
         Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a> // Logo by <a href="https://thenounproject.com/mockturtle/">Sergey Demushkin</a>
     </footer>
 
-    {{ghost_footer}}
+    {{ghost_foot}}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="{{asset "js/subbscribe.min.js"}}"></script>
