--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ header .banner {
 }
 .index-wrapper {
     margin-top: 60px;
-    line-height: 1.75em
+    line-height: 1.75em;
 }
 .index-wrapper section#timeline article div.inner,
 .post-wrapper {
@@ -341,8 +341,8 @@ header .banner {
     position: relative;
     margin: 0 auto!important;
     width: 100px!important;
-    height: auto;
-    border-radius: 100%;
+    height: 100px;
+    border-radius: 50%;
     top: -50px;
 }
 .more-posts {
