--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700">
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{@blog.logo}}">
-    <link rel="shortcut icon" href="{{@blog.logo}}"> {{#is "home"}}
+    <link rel="shortcut icon" href="{{@blog.logo}}"> 
+    {{#is "home,tag"}}
     <style>
         header {
             margin: 20px auto;
@@ -64,7 +65,7 @@
     {{{body}}}
 
     <footer>
-        Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a> // Logo by <a href="https://thenounproject.com/mockturtle/">Sergey Demushkin</a>
+        Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a>
     </footer>
 
     {{ghost_foot}}
