--- a/default.hbs
+++ b/default.hbs
@@ -65,7 +65,7 @@
     {{{body}}}
 
     <footer>
-        Theme by <a href="https://github.com/Dennis-Mayk/Practice/">Dennis</a>
+        // <a href="http://lipho.net">lipho.net</a>
     </footer>
 
     {{ghost_foot}}
