Make the theme compatible with ghost 2.x

--- a/default.hbs
+++ b/default.hbs
@@ -8,7 +8,6 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
 
     <title>{{meta_title}}</title>
-    <meta name="description" content="{{meta_description}}">
 
     <link rel="stylesheet" href="{{asset "css/style.css"}}">
     <link rel="stylesheet" href="{{asset "css/subbscribe.css"}}">
@@ -24,7 +23,7 @@
             border-radius: 2px;
             padding-bottom: 20px;
             width: 80%;
-            background: url({{@blog.cover}});
+            background: url({{@blog.cover_image}});
             background-size: cover;
             height: auto;
             text-align: center;
